@startuml

title __UPDATER's Class Diagram__\n

  namespace sqelevator {
    namespace updater {
      class sqelevator.updater.ElevatorUpdater {
          {static} - LOG : Logger
          + ElevatorUpdater()
          + update()
      }
    }
  }
  

  namespace sqelevator {
    namespace updater {
      interface sqelevator.updater.Updater {
          {abstract} + update()
      }
    }
  }
  

  sqelevator.updater.ElevatorUpdater .up.|> sqelevator.updater.Updater
  sqelevator.updater.ElevatorUpdater o-- sqelevator.IElevator : control
  sqelevator.updater.ElevatorUpdater o-- sqelevator.Elevator : elevator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
